5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4152/executions/1863_2178.log
== TEST (2019-07-02 10:21:37) 
-- CODE:
from numpy import *
mat = array(eval(input("Matriz: ")))
soma = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if i =! j:
			soma = soma + mat[i,j]
print(soma)
-- ERROR:
File "XXXX", line 6
    if i =! j:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:21:52) 
-- CODE:
from numpy import *
mat = array(eval(input("Matriz: ")))
soma = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if (i != j):
			soma = soma + mat[i,j]
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:22:26) 
-- CODE:
from numpy import *
mat = array(eval(input("Matriz: ")))
soma = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if (i != j):
			soma = soma + mat[i,j]
print(round(soma, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:22:54) 
-- CODE:
from numpy import *
mat = array(eval(input("Matriz: ")))
soma = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if (i != j):
			soma = soma + mat[i,j]
print(round(soma, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:23:22) 
-- CODE:
from numpy import *
mat = array(eval(input("Matriz: ")))
soma = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if (i != j):
			soma = soma + mat[i,j]
print(round(soma, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:26:16) 
-- CODE:
from numpy import *
mat = array(eval(input("Matriz: ")))
soma = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if (i != j):
			soma = soma + mat[i,j]
print(round(soma, 1))
-- EXECUTION TIME:
0.817663
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
106.0
---- user output:
106
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
3.06
---- user output:
3.1
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
1048.7
---- user output:
1048.7
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:26:33) 
-- CODE:
from numpy import *
mat = array(eval(input("Matriz: ")))
soma = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if (i != j):
			soma = soma + mat[i,j]
print(round(soma, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:26:48) 
-- CODE:
from numpy import *
mat = array(eval(input("Matriz: ")))
soma = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if (i != j):
			soma = soma + mat[i,j]
print(round(soma, 2))
-- EXECUTION TIME:
1.05311
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
106.0
---- user output:
106
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
3.06
---- user output:
3.06
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
1048.7
---- user output:
1048.7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
